--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
             Group Divider
         </a>
     </nav>
-    <div class="main-container" ng-view></div>
+    <div class="main-container" ui-view></div>
 
     <script type="text/javascript" src="plugins/bootstrap-4.3.1/js/jquery-3.3.1.min.js"></script>
-    <!-- <script type="text/javascript" src="plugins/angular-1.7.8/angular.min.js"></script>
-    <script type="text/javascript" src="plugins/angular-1.7.8/angular-route.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
+    <script type="text/javascript" src="plugins/angular-1.7.8/angular.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.js"></script>
     <script type="text/javascript" src="plugins/bootstrap-4.3.1/js/popper.min.js"></script>
     <script type="text/javascript" src="plugins/bootstrap-4.3.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="plugins/croppie-master/croppie.js"></script>
 
     <script type="text/javascript" src="js/app.min.js"></script>
     <script type="text/javascript" src="js/controllers/appCtrl.min.js"></script>
+    <script type="text/javascript" src="js/controllers/membersCtrl.min.js"></script>
 </body>
 
 </html>
