--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
             z-index: 1100;
         }
 
+        .separate-loader {
+            background-color: rgba(30, 44, 36, 0.3);
+        }
+
         .page-loader img {
             max-width: 150px;
+        }
+
+        .separate-loader img {
+            max-width: 100px;
         }
     </style>
 </head>
@@ -39,6 +47,9 @@
     <div class="page-loader" ng-if="mainLoaderIs">
         <img src="img/pageLoader.gif" alt="Loader" />
     </div>
+    <div class="page-loader separate-loader" ng-if="separateLoaderIs">
+        <img src="img/separateLoader.gif" alt="Loader" />
+    </div>
 
     <nav class="navbar navbar-expand-lg navbar-dark my-navbar">
         <a class="navbar-brand" href="#" title="Logo">
@@ -46,12 +57,12 @@
             Group Divider
         </a>
     </nav>
+    
     <div class="main-container" ui-view></div>
 
     <script type="text/javascript" src="plugins/bootstrap-4.3.1/js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="plugins/angular-1.7.8/angular.min.js"></script>
-    <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.js"></script>
+    <script type="text/javascript" src="plugins/angular-1.7.8/angular-ui-router.js"></script>
     <script type="text/javascript" src="plugins/bootstrap-4.3.1/js/popper.min.js"></script>
     <script type="text/javascript" src="plugins/bootstrap-4.3.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="plugins/croppie-master/croppie.js"></script>
