index db initiated

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <script type="text/javascript" src="plugins/croppie-master/croppie.js"></script>
 
     <script type="text/javascript" src="js/app.min.js"></script>
-    <script type="text/javascript" src="js/controllers/appCtrl.min.js"></script>
+    <script type="text/javascript" src="js/controllers/appCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/membersCtrl.min.js"></script>
 </body>
 
