min file added and home ctrl added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Jamal Document</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 
-    <link rel="stylesheet" href="plugins/croppie-master/croppie.css" />
+    <link rel="stylesheet" href="plugins/croppie-master/croppie.min.css" />
     <link rel="stylesheet" href="plugins/bootstrap-4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/theme.min.css" />
@@ -60,13 +60,14 @@
 
     <script type="text/javascript" src="plugins/bootstrap-4.3.1/js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="plugins/angular-1.7.8/angular.min.js"></script>
-    <script type="text/javascript" src="plugins/angular-1.7.8/angular-ui-router.js"></script>
+    <script type="text/javascript" src="plugins/angular-1.7.8/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="plugins/bootstrap-4.3.1/js/popper.min.js"></script>
     <script type="text/javascript" src="plugins/bootstrap-4.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="plugins/croppie-master/croppie.js"></script>
+    <script type="text/javascript" src="plugins/croppie-master/croppie.min.js"></script>
 
     <script type="text/javascript" src="js/app.min.js"></script>
-    <script type="text/javascript" src="js/controllers/appCtrl.js"></script>
+    <script type="text/javascript" src="js/controllers/appCtrl.min.js"></script>
+    <script type="text/javascript" src="js/controllers/homeCtrl.min.js"></script>
     <script type="text/javascript" src="js/controllers/membersCtrl.min.js"></script>
 </body>
 
