--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="img/pageLoader.gif" alt="Loader" />
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark my-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark my-navbar" ng-if="mainHeaderShownIs">
         <a class="navbar-brand" href="#" title="Logo">
             <img src="img/logo.png" alt="Jamal" /> Group Divider</a>
     </nav>
